--- a/templates/my_projects.html
+++ b/templates/my_projects.html
@@ -19,7 +19,7 @@
                     <h2 class="card-title">{{ project.name }}</h2>
                     <p class="people">
                         {{ project.volunteers | length }}/{{ project.number_required }}
-                        <img src="{{ url_for('static', filename='Images/user.png') }}">
+                        <img src="{{ url_for('static', filename='images/user.png') }}">
                     </p>
                 </div>
             </div>
